# together

./: README.md  pubspec.yaml  pyproject.toml
.github/workflows/: build.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
back/: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.local.yml  manage.py  pyproject.toml  requirements.txt
back/apps/authentication/: apps.py  backends.py  models.py  permissions.py  serializers.py  urls.py  views.py
back/apps/authentication/groups/: serializers.py  views.py
back/apps/authentication/migrations/: 0001_initial.py
back/core/: .env.example  constants.py  env.py  mixins.py  permissions_utils.py  token_serializer.py  urls.py  views.py  wsgi.py
back/core/conf/: settings.py
back/core/conf/libs/: __init__.py  djoser.py  drf.py  email.py  spectacular.py
back/core/utils/: exception_formatter.py  exceptions.py  mixins.py  permissions_utils.py
back/locale/ru/LC_MESSAGES/: django.mo  django.po
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/src/: app.dart
lib/src/block/auth/: auth_block.dart  auth_event.dart  auth_state.dart
lib/src/domain/: announcement.dart
lib/src/localization/: app_en.arb
lib/src/model/: announcement.dart  user.dart
lib/src/navigation/: destination.dart
lib/src/network/: network_service.dart
lib/src/presentation/announcement/: announcement_details.dart  announcements.dart
lib/src/presentation/create_announcement/: create_announcement.dart
lib/src/presentation/login/block/: block_login.dart  (+2 more)
lib/src/registration/: choose_role_view.dart  main_registration_screen.dart  needy_registration_view.dart  registration_view.dart
lib/src/utils/exceptions/: form_exceptions.dart
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
web/: index.html
windows/: CMakeLists.txt
windows/runner/: Runner.rc
(+10 files in other folders)
