[tool.poetry]
name = "back"
version = "0.1.0"
description = ""
authors = ["benya <baronin.sv@intechs.by>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.12"
djangorestframework = "^3.14.0"
djoser = "^2.2.2"
psycopg2-binary = "2.9.9"
django = "^5.0.1"
django-environ = "^0.11.2"
drf-spectacular = "^0.27.1"
django-filter = "^23.5"
djangorestframework-simplejwt = "^5.3.1"
gunicorn = "^21.2.0"
django-wkhtmltopdf = "^3.4.0"
django-mptt = "^0.16.0"
openpyxl = "^3.1.2"
drf-standardized-errors = "^0.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"